# typerbole

./: .gitignore  .travis.yaml  .travis.yml  .travis.yml.unused  CONTRIBUTING.md  LICENSE  README.md  hagalaz-typesystems.cabal  lambdacube-overview.md  stack.yaml  typerbole.cabal
diagrams/: Main.hs  typeclass-hierarchy.dia
src/Calculi/: Lambda.hs
src/Calculi/Lambda/: Cube.hs
src/Calculi/Lambda/Cube/: Dependent.hs  HigherOrder.hs  Inferable.hs  Polymorphic.hs  SimpleType.hs  TH.hs  Typechecking.hs
src/Calculi/Lambda/Cube/Polymorphic/: Unification.hs
src/Calculi/Lambda/Cube/Systems/: SimplyTyped.hs  SystemF.hs  SystemFOmega.hs
src/Compiler/Typesystem/: CalculusOfConstructions.hs  Hask.hs  SimplyTyped.hs  SystemF.hs  SystemFOmega.hs
src/Control/: Typecheckable.hs
src/Data/Graph/Inductive/: Helper.hs
test/: Spec.hs
