name:                hagalaz-typesystems
version:             0.1.0.0
synopsis:            A modelling of typesystems by typeclasses for lambda cube
                     axies and related properties.
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Fionan Haralddottir
maintainer:          ma302fh@gold.ac.uk
copyright:           2016 Fionan Haralddottir
category:            Typesystem
                   , Educational
                   , LambdaCalculus
                   , LambdaCube
                   , AST
                   , TypeTheory
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Calculi.Lambda
                     , Calculi.Lambda.Cube
                     , Calculi.Lambda.Cube.SimpleType
                     , Calculi.Lambda.Cube.Polymorphic
                     , Calculi.Lambda.Cube.HigherOrder
                     , Calculi.Lambda.Cube.Dependent
                     , Calculi.Lambda.Cube.Inferable
                     , Calculi.Lambda.Cube.Systems.SystemFOmega
                     , Calculi.Lambda.Cube.Systems.SimplyTyped
                     , Data.Graph.Inductive.Helper
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 0.6
                     , data-ordlist == 0.4.7.0
                     , either
                     , semigroups == 0.18.1
                     , bifunctors >= 5 && < 5.3
                     , fgl >= 5.5 && < 5.6
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  extensions:          ScopedTypeVariables
                     , LambdaCase


test-suite hagalaz-testing
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  extensions:          ScopedTypeVariables
                     , LambdaCase
